# linux-surface-pro-11-oe

./: .gitignore  README.md
docs/: hardware-report-20260613.md  installed-audio-speaker-wsa2-test-20260615.md  installed-bluetooth-public-address-test-20260614.md  installed-nvme-boot-test-20260613.md  installed-wifi-clean-flow-test-20260614.md  installed-wifi-patched-rfkill-test-20260614.md  installed-wifi-rfkill-test-20260613.md  installed-wifi-rfkill-upgrade-test-20260613.md  installed-wifi-windows-firmware-cold-boot-test-20260613.md  live-usb-test-20260613.md
docs/adr/: adr-0001-target-repo-and-scope.md  adr-0002-boot-shim-image-strategy.md  adr-0003-denali-dtb-and-grub-injection.md  adr-0004-firmware-extraction-policy.md  adr-0005-wifi-board-fixup.md  adr-0006-build-and-write-guardrails.md  adr-0007-auto-dtb-extraction-and-debug-entries.md  adr-0008-ubuntu-denali-dtb-variants.md  adr-0009-default-casper-iso-scan-boot.md  adr-0010-image-validation-workflow.md  adr-0011-grub-efi-console-input.md  adr-0012-grub-module-tree.md  adr-0013-standalone-grub-external-keyboard-test.md  adr-0014-direct-grub-autoboot-diagnostic.md  adr-0015-direct-live-desktop-and-install-gate.md  adr-0016-usb-data-mount-and-installed-system-helpers.md  adr-0017-grub-dtb-path-for-separate-boot.md  adr-0018-wifi-rfkill-bring-up-gate.md  adr-0019-patched-qcom-x1e-kernel-for-wifi-rfkill.md  adr-0020-dockerized-arm64-kernel-build.md  adr-0021-git-fallback-kernel-build-toolchain.md  adr-0022-docker-kernel-build-without-fakeroot.md  adr-0023-docker-kernel-build-case-sensitive-work-volume.md  adr-0024-bluetooth-audio-and-board-data-gates.md  adr-0025-rfkill-capable-dtb-selection.md  adr-0026-prebuilt-kernel-release-artifacts.md  adr-0027-bluetooth-public-address.md  adr-0028-bounded-bluetooth-management-hook.md  adr-0029-bluetooth-cold-boot-service-retry-profile.md  adr-0030-bluetooth-btmgmt-batch-sequence.md  adr-0031-bluetooth-indexed-public-address.md  adr-0032-raw-mgmt-socket-bluetooth-cold-boot.md  adr-0033-audio-topology-gap.md  adr-0034-wsa2-regcache-right-speaker.md  adr-0035-audio-boot-race-alsactl.md  adr-0036-right-speaker-audio-position-reorder.md  adr-0037-bluetooth-tethering-pan-nap.md  adr-0037-jglathe-qcom-7-1-1-stubble-paths.md  adr-0038-split-compressed-live-image-release-assets.md  adr-0039-kde-plasma-desktop-option.md  (+7 more)
docs/how-to/: _how-to-template.md  how-to-bring-up-audio.md  how-to-bring-up-bluetooth.md  how-to-build-patched-qcom-x1e-kernel.md  how-to-compile-sp11-bt-set-addr.md  how-to-generate-service-report.md  how-to-reinstall-patched-kernel-from-usb.md  how-to-release-kernel-artifacts.md  how-to-repeat-kernel-build-for-new-release.md  how-to-troubleshoot-docker-exec-format-error.md  how-to-troubleshoot-kernel-git-clone-failures.md  how-to-troubleshoot-linux-docker-overlay.md
patches/jglathe-qcom-x1e-7.1.1/: 0001-debian-qcom-x1e-update-annotations-for-7.1.1-jg-0.patch  0002-debian-qcom-x1e-use-packaged-stubble-paths.patch  README.md
patches/jglathe-qcom-x1e-7.1.3/: 0001-debian-qcom-x1e-update-annotations-for-7.1.3-jg-0.patch  0001-debian-qcom-x1e-update-annotations-for-7.1.3-jg-1.patch  0002-debian-qcom-x1e-use-packaged-stubble-paths.patch  README.md
patches/sp11-dmic-2p4mhz/: 0001-arm64-dts-qcom-x1-denali-test-2.4-MHz-DMIC-clock.patch  0002-debian-qcom-x1e-name-2.4-MHz-DMIC-test-build.patch  README.md
patches/sp11-qcom-x1e-7.1.3-v2/: 0001-arm64-dts-qcom-x1-denali-use-2.4-MHz-DMIC-clock.patch  0002-debian-qcom-x1e-name-SP11-v2-build.patch  README.md
patches/sp11-touchscreen/: 0001-dma-qcom-gpi-Add-QSPI-protocol-support.patch  0002-spi-geni-qcom-Add-QSPI-1-4-4-mode-support.patch  0003-hid-spi-v4-01.patch  (+12 more)
payload/: README.md
payload/audio/: CMakeLists.txt  MICROSOFT-Surface-Pro-11.conf  Surface11-HiFi.conf  x1e80100.conf
scripts/: build-sp11-live-usb-image.sh  build-sp11-qcom-x1e-kernel-docker.sh  build-sp11-qcom-x1e-kernel.sh  collect-sp11-kernel-source-metadata.sh  finish-sp11-installed-system.sh  install-sp11-support.sh  prepare-sp11-audio-release-assets.sh  prepare-sp11-image-release-assets.sh  prepare-sp11-installed-system.sh  prepare-sp11-kernel-release-assets.sh  regenerate-qcom-x1e-annotations.sh  sp11-audio-topology.sh  sp11-bluetooth-mac.sh  sp11-bluetooth-tethering.sh  sp11-enable-wsa-routing.sh  sp11-fix-audio-boot-race.sh  sp11-grab-fw.sh  sp11-install-kde-desktop.sh  sp11-pipewire-speaker-sink.sh  sp11-wifi-board-fixup.sh  troubleshoot-sp11-audio.sh  troubleshoot-sp11-bluetooth.sh  troubleshoot-sp11-wifi-rfkill.sh  write-image-to-macos-disk.sh
tools/: collect-sp11-windows-bluetooth-address.ps1  collect-sp11-windows-diagnostics.ps1  sp11-bt-set-addr.c
(+5 files in other folders)
